WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185525
Don't allocate value profiles when the JIT is disabled
https://bugs.webkit.org/show_bug.cgi?id=185525
Summary
Don't allocate value profiles when the JIT is disabled
Saam Barati
Reported
2018-05-10 12:05:15 PDT
...
Attachments
patch
(8.41 KB, patch)
2018-05-10 16:26 PDT
,
Saam Barati
msaboff
: review+
Details
Formatted Diff
Diff
patch for landing
(8.45 KB, patch)
2018-05-10 20:30 PDT
,
Saam Barati
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(8.45 KB, patch)
2018-05-10 20:42 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-05-10 16:26:56 PDT
Created
attachment 340144
[details]
patch
EWS Watchlist
Comment 2
2018-05-10 16:28:27 PDT
Attachment 340144
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/heap/Heap.cpp:1461: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Saboff
Comment 3
2018-05-10 18:38:41 PDT
Comment on
attachment 340144
[details]
patch r=me
Saam Barati
Comment 4
2018-05-10 20:30:44 PDT
Created
attachment 340162
[details]
patch for landing Thanks for the review.
EWS Watchlist
Comment 5
2018-05-10 20:31:52 PDT
Attachment 340162
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/heap/Heap.cpp:1461: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 6
2018-05-10 20:36:54 PDT
Comment on
attachment 340162
[details]
patch for landing Rejecting
attachment 340162
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 340162, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WTF/ChangeLog contains OOPS!. Full output:
http://webkit-queues.webkit.org/results/7646602
Saam Barati
Comment 7
2018-05-10 20:42:54 PDT
Created
attachment 340164
[details]
patch for landing
WebKit Commit Bot
Comment 8
2018-05-11 00:57:26 PDT
Comment on
attachment 340164
[details]
patch for landing Clearing flags on attachment: 340164 Committed
r231695
: <
https://trac.webkit.org/changeset/231695
>
WebKit Commit Bot
Comment 9
2018-05-11 00:57:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2018-05-11 00:58:19 PDT
<
rdar://problem/40156489
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug