Source/JavaScriptCore/heap/Heap.cpp
@@ -1457,6 +1457,9 @@ NEVER_INLINE bool Heap::runEndPhase(GCConductor conn)
         
     if (vm()->typeProfiler())
         vm()->typeProfiler()->invalidateTypeSetCache();
+
+    if (ValueProfile* profile = vm()->noJITValueProfileSingleton.get())
+        *profile = ValueProfile(0);
         
     reapWeakHandles();
     pruneStaleEntriesFromWeakGCMaps();
