Source/JavaScriptCore/runtime/VM.h
@@ -171,6 +171,7 @@ class Signature;
 
 struct HashTable;
 struct Instruction;
+struct ValueProfile;
 
 struct LocalTimeOffsetCache {
     LocalTimeOffsetCache()
@@ -720,6 +721,8 @@ public:
     typedef ListHashSet<RegExp*> RTTraceList;
     RTTraceList* m_rtTraceList;
 #endif
+
+    std::unique_ptr<ValueProfile> noJITValueProfileSingleton;
 
     JS_EXPORT_PRIVATE void resetDateCache();
 
